--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="love">love</string>
     <string name="share">share</string>
     <string name="joke">Jokes</string>
+    <string name="liked"><i>"You Liked Joke Number : %d"</i></string>
     <string name="favJokes">Favorite Jokes</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
